# epd_calendar

./: .env.example  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Cargo.toml_bak  README.md  TEST_REPORT.md  build.rs  input.html  new_rules.md  parse.py  parse_html.py  render.py  rules.md  runtime_display.py  runtime_params.json  runtime_params_complex.json  tap.sh  test.html  tmp  tmp2  重构说明.md
.cargo/: config.toml
.trae/: rules.md
.trae/documents/: EPD Calendar 重构为消息总线架构.md  实现高性能布局系统.md
assets/fonts/: chars.txt
assets/layout/: main.html  main.yaml
bak/: main.rs
bak/assets/: mod.rs
bak/common/: mod.rs
bak/platform/: common.rs  mod.rs  simulator.rs  tspi.rs
builder/: config.rs  mod.rs  utils.rs
builder/modules/: battery_icons.rs  date_fonts.rs  digit_icons.rs  font.rs  font_generator.rs  font_generatorbak.rs  hitokoto.rs  icon_generator.rs  layout_processor.rs  lunar.rs  mod.rs  network_icons.rs  weather_icons.rs
builder/utils/: font_renderer.rs  icon_renderer.rs  layout_validate.rs  layout_yaml_parser.rs  mod.rs  progress.rs
documents/: 01-系统架构概览.md  02-系统状态与事件.md  03-服务模块.md  04-显示服务设计.md  05-数据流与通信.md  06-关键时序要求.md  07-配置参数.md  08-功耗管理.md  09-硬件接口.md  10-错误处理.md  11-Cargo构建系统.md  12-Flash分区布局.md  README.md  graphics.md  智能墨水屏时钟软件架构设计文档.md
libs/simulated-rtc/: Cargo.toml
libs/simulated-wdt/: Cargo.toml
libs/simulator/: Cargo.toml  README.md
libs/simulator-hal/: Cargo.toml
libs/simulator-hal/src/: ble.rs  config.rs  http_server.rs  lib.rs  rtc.rs  state.rs  wdt.rs  wifi.rs
libs/simulator/src/: ble.rs  button.rs  flash.rs  lib.rs  rtc.rs  sleep.rs  watchdog.rs
libs/simulator/src/control/: http_server.rs  mod.rs  types.rs
lxx-calendar-boards/esp32c6/: Cargo.toml  build.rs  partitions.csv
lxx-calendar-boards/esp32c6/src/: lib.rs  main.rs  mutex.rs  sleep.rs
lxx-calendar-boards/esp32c6/src/drivers/: battery.rs  ble.rs  button.rs  buzzer.rs  epd.rs  flash.rs  led.rs  mod.rs  network.rs  ota.rs  rng.rs  rtc.rs  watchdog.rs  wifi.rs
lxx-calendar-boards/simulator/: Cargo.toml
lxx-calendar-boards/simulator/src/: main.rs
lxx-calendar-boards/simulator/src/drivers/: button.rs  buzzer.rs  epd.rs  mod.rs  network.rs
lxx-calendar-boards/tspi/: Cargo.toml
lxx-calendar-boards/tspi/src/: main.rs  sleep.rs
lxx-calendar-boards/tspi/src/drivers/: button.rs  buzzer.rs  led.rs  mod.rs  network.rs  wifi.rs
lxx-calendar-common/: Cargo.toml  build.rs
lxx-calendar-common/src/: compiled_config.rs  flash_layout.rs  http.rs  lib.rs  macros.rs  sntp.rs
lxx-calendar-common/src/events/: mod.rs  system.rs
lxx-calendar-common/src/storage/: config_persistence.rs  log_storage.rs  mod.rs
lxx-calendar-common/src/traits/: battery.rs  ble.rs  button.rs  buzzer.rs  led.rs  lpu.rs  mod.rs  network.rs  ota.rs  platform.rs  rtc.rs  watchdog.rs  wifi.rs
lxx-calendar-common/src/types/: async_types.rs  config.rs  display.rs  error.rs  layout.rs  melody.rs  mod.rs  shared_mem.rs  time.rs  weather.rs
lxx-calendar-common/src/weather/: api.rs  converter.rs  jwt.rs  mod.rs  openmeteo.rs  openmeteo_converter.rs
lxx-calendar-core/: Cargo.toml  build.rs
lxx-calendar-core/src/: lib.rs  main.rs
lxx-calendar-core/src/audio_service/: mod.rs  service.rs
lxx-calendar-core/src/ble_service/: mod.rs  service.rs
lxx-calendar-core/src/config_manager/: manager.rs  mod.rs
lxx-calendar-core/src/display_service/: mod.rs  service.rs
lxx-calendar-core/src/managers/: button_task.rs  config_manager.rs  display_manager.rs  event_producer.rs  mod.rs  state_manager.rs  watchdog_manager.rs
lxx-calendar-core/src/network_service/: mod.rs  service.rs
lxx-calendar-core/src/platform/: mod.rs
lxx-calendar-core/src/power_manager/: manager.rs  mod.rs
lxx-calendar-core/src/services/: audio_service.rs  ble_service.rs  button_service.rs  display_manager.rs  display_service.rs  http_client.rs  mod.rs  network_service.rs  network_sync_service.rs  power_service.rs  quote_service.rs  time_service.rs
lxx-calendar-core/src/state_manager/: manager.rs  mod.rs
lxx-calendar-core/src/time_service/: mod.rs  service.rs
lxx-calendar-graphics/: Cargo.toml  IMPLEMENTATION.md  LAYOUT_GUIDE.md  build.rs
lxx-calendar-graphics/WeatherIcons/: package-lock.json
lxx-calendar-graphics/builder/: config.rs  mod.rs
lxx-calendar-graphics/builder/modules/: font_generator.rs  hitokoto.rs  icon_generator.rs  mod.rs
lxx-calendar-graphics/builder/utils/: file_utils.rs  icon_renderer.rs  mod.rs  string_utils.rs
lxx-calendar-graphics/examples/: json_layout_demo.rs
lxx-calendar-graphics/scripts/: layout_debug.py
lxx-calendar-graphics/src/: lib.rs
lxx-calendar-graphics/src/assets/: mod.rs  modes.json
lxx-calendar-graphics/src/layout/: mod.rs  parser.rs  renderer.rs  types.rs
lxx-calendar-graphics/src/parser/: layout_parser.rs  mod.rs
lxx-calendar-graphics/src/renderer/: framebuffer.rs  icon.rs  layout.rs  layout_engine.rs  mod.rs  text.rs
lxx-calendar-quotes/: Cargo.toml  build.rs
lxx-calendar-quotes/src/: lib.rs
scripts/: font_debug.py  icon_debug.py  layout_debug.py  merge_unique_chars.py
shared/: g_font_size_bak.rs  g_font_size_impl_bak.rs  layout_types.rs  mod.rs
simulator-webui/: Cargo.toml
simulator-webui/src/: main.rs
src/: main.rs
src/app/: .gitignore  mod.rs  quote.rs  time.rs  weather.rs
src/app_core/: display_manager.rs
src/assets/: mod.rs
src/bak/: main_task.rs
src/bsp/: embedded_linux.rs  mod.rs  simulator.rs
src/common/: config.rs  error.rs  mod.rs  system_state.rs  types.rs  weather.rs
src/core/: mod.rs
src/driver/: mod.rs  network.rs  ntp_source.rs  power.rs  rng.rs  sensor.rs  storage.rs  time_source.rs
src/drivers/: epd.rs  mod.rs
src/drv/: .gitignore  battery_renderer.rs  datetime_renderer.rs  hitokoto_renderer.rs  lcg.rs  mod.rs  network_renderer.rs  text_renderer.rs  time_renderer.rs
src/graphics/: buffer.rs  icon.rs  mod.rs  text.rs
src/hal/: gpio.rs  linux_gpio.rs  mod.rs
src/kernel/: mod.rs
src/platform/: common.rs  esp32.rs  mod.rs  simulator.rs  tspi.rs
src/render/: hitokoto_renderer.rs  (+5 more)
test/: font_debug2.py
(+193 files in other folders)
