[workspace]
members = ["lxx-calendar-core", "lxx-calendar-common"]
resolver = "2"

[workspace.package]
edition = "2024"


[profile.dev]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
overflow-checks = true
#opt-level = "s" # disable to play with GDB
lto = false
panic = "unwind"

[profile.release]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
overflow-checks = true
opt-level = "z"
lto = "fat"
panic = "unwind"
