[workspace]
members = [
    "lxx-calendar-core",
    "lxx-calendar-common",
    "lxx-calendar-graphics",
    "lxx-calendar-quotes",
    "lxx-calendar-boards/esp32c6",
    # "lxx-calendar-boards/tspi",
    # "lxx-calendar-boards/simulator",
    "libs/epd",
    "libs/sxtwl-rs",
    # "libs/linux-embedded-hal",
    # "libs/simulated-wdt",
    # "libs/simulated-rtc",
    # "libs/embedded-hal-mock",
]
default-members = [
    "lxx-calendar-boards/esp32c6",
    # "lxx-calendar-boards/tspi",
    # "lxx-calendar-boards/simulator",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# 核心依赖
log = { version = "0.4.29", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
async-trait = "0.1.89"
cfg-if = "1.0.4"
defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.1.0" }
defmt-macros = { version = "1.0.1" }
riscv = { version = "0.11.0" }

# 嵌入式相关依赖
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.1"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
embedded-svc = { version = "0.28.1", default-features = false }

# 无标准库数据结构
static_cell = "2.1.1"
critical-section = "1.2.0"
heapless = { version = "0.9.2", default-features = false, features = ["serde"] }
heapless_08 = { package = "heapless", version = "0.8.0", default-features = false }

# Embassy框架
embassy-sync = { package = "embassy-sync", version = "0.7.2", default-features = false }
embassy-executor = { version = "0.9.1", default-features = false }
embassy-time = { version = "0.5.0", default-features = false }
embassy-net = { version = "0.8.0", default-features = false, features = [
    "udp",
    "tcp",
    "dns",
    "proto-ipv4",
    "medium-ethernet",
    "dhcpv4",
] }
embassy-embedded-hal = { version = "0.5.0", default-features = false }
embassy-net-tuntap = { version = "0.1.0" }

# 序列化/反序列化
serde_json = { version = "1.0.149", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0.228", default-features = false, features = [
    "alloc",
    "derive",
] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
nb = "1.1.0"

# 网络相关
reqwless = { version = "0.13.0", default-features = false, features = [
    "embedded-tls",
    "alloc",
    "log",
] }
sntpc = { git = "https://github.com/vpetrigo/sntpc", branch = "master", default-features = false }
sntpc-net-embassy = { git = "https://github.com/vpetrigo/sntpc", branch = "master", default-features = false }

# GZip解压
miniz_oxide = "0.8.9"

# JWT认证
ed25519-compact = { version = "2.2.0", default-features = false }

# 随机数相关
getrandom = { version = "0.3.4", default-features = false }

# 时间相关
jiff = { version = "0.2.18", default-features = false, features = ["alloc"] }

# 二维码生成
qrcode = { path = "libs/qrcode", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
panic = "abort"
