[package]
name = "lxx-calendar-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
# 核心依赖
log = { workspace = true }
thiserror = { workspace = true }
cfg-if = { workspace = true }
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
heapless = { workspace = true }

# 子项目依赖
lxx-calendar-common = { path = "../lxx-calendar-common", default-features = false, features = [
    "log",
] }
lxx-calendar-graphics = { path = "../lxx-calendar-graphics" }
lxx-calendar-quotes = { path = "../lxx-calendar-quotes" }
sxtwl-rs = { path = "../libs/sxtwl-rs", features = ["festival"] }

# Embassy框架
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-net = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-futures = "0.1.2"

# 随机数
getrandom = { workspace = true }

# SNTP时间同步
sntpc = { workspace = true }
sntpc-net-embassy = { workspace = true }
