[package]
name = "lxx-calendar-core"
version = "0.1.0"
edition.workspace = true

[features]
default = ["log"]
log = ["dep:log", "lxx-calendar-common/log"]
defmt = ["dep:defmt", "dep:defmt-rtt", "lxx-calendar-common/defmt"]
simulator = []

[dependencies]
# 核心依赖
log = { workspace = true, optional = true }
thiserror = { workspace = true }
cfg-if = { workspace = true }
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
heapless = { workspace = true }

# 子项目依赖
lxx-calendar-common = { path = "../lxx-calendar-common" }
lxx-calendar-graphics = { path = "../lxx-calendar-graphics" }
lxx-calendar-quotes = { path = "../lxx-calendar-quotes" }
sxtwl-rs = { path = "../libs/sxtwl-rs", features = ["festival"] }

# Embassy 框架
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-net = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-futures = { workspace = true }

# HTTP client (reqwless 已包含 embedded-tls)
reqwless = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }

# 序列化
serde_json = { workspace = true }

# SNTP 时间同步
sntpc = { workspace = true }
sntpc-net-embassy = { workspace = true }

# Flash 存储
embedded-storage = { workspace = true }

# 静态单元格
static_cell = { workspace = true }
