[package]
name = "lxx-calendar-graphics"
version = "0.1.0"
edition.workspace = true

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
walkdir = "2.5"
freetype-rs = { version = "*", features = ["bundled"] }
unicode-normalization = "0.1"
usvg = "0.45.1"
resvg = "0.45.1"
postcard = { version = "1.1", features = ["use-std"] }
rayon = "1.11.0"
html_parser = "0.7.0"
scraper = "0.25.0"
anyhow = "1.0"
