[package]
name = "lxx-calendar-boards-esp32c6"
version = "0.1.0"
edition.workspace = true

[dependencies]
lxx-calendar-common = { path = "../../lxx-calendar-common" }

esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-alloc = { version = "0.9.0" }
esp-rtos = { version = "0.2.0", features = [
    "esp-radio",
    "embassy",
    "esp32c6",
    "esp-alloc",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-println = { version = "0.16.1", features = ["esp32c6"] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32c6",
    "defmt",
    "panic-handler",
] }
esp-radio = { version = "0.17.0", features = [
    "esp32c6",
    "wifi",
    "esp-alloc",
    "unstable",
] }
esp-sync = { version = "0.1.1", features = ["esp32c6"] }
esp-storage = { version = "0.8.1", features = ["esp32c6"] }
panic-rtt-target = { version = "0.2.0" }
rtt-target = { version = "0.6.2", features = ["defmt"] }
embassy-executor.workspace = true
defmt.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-embedded-hal.workspace = true
epd-yrd0750ryf665f60 = { version = "0.1.0", path = "../../libs/epd" }
