[package]
name = "lxx-calendar-boards-simulator"
version = "0.1.0"
edition.workspace = true

[features]
default = ["simulator"]
simulator = []
embedded_graphics_simulator = []

[dependencies]
lxx-calendar-common = { path = "../../lxx-calendar-common" }
lxx-calendar-core = { path = "../../lxx-calendar-core" }
static_cell = { workspace = true }
simulated-wdt = { path = "../../libs/simulated-wdt" }
simulated-rtc = { path = "../../libs/simulated-rtc" }
epd-yrd0750ryf665f60 = { version = "0.1.0", path = "../../libs/epd", features = ["simulator"] }
critical-section = { workspace = true, features = ["std"] }
embedded-hal-mock = { path = "../../libs/embedded-hal-mock", features = ["eh1", "embedded-hal-async"] }

[dependencies.embassy-sync]
workspace = true

[dependencies.embassy-time]
workspace = true
features = ["std"]

[dependencies.embassy-executor]
workspace = true
features = ["arch-std", "executor-thread"]
