[package]
name = "lxx-calendar-boards-simulator"
version = "0.1.0"
edition.workspace = true

[features]
default = ["simulator"]
simulator = []
embedded_graphics_simulator = []

[dependencies]
lxx-calendar-common = { path = "../../lxx-calendar-common", features = ["log"] }
lxx-calendar-core = { path = "../../lxx-calendar-core", features = ["simulator"] }
static_cell = { workspace = true }
simulator = { path = "../../libs/simulator", features = ["std"] }
epd-yrd0750ryf665f60 = { version = "0.1.0", path = "../../libs/epd", features = [
    "simulator",
] }
critical-section = { workspace = true, features = ["std"] }
embedded-hal-mock = { path = "../../libs/embedded-hal-mock", features = [
    "eh1",
    "embedded-hal-async",
] }
async-trait = { workspace = true }
env_logger = "0.11.9"
getrandom = { workspace = true, features = ["std"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["std"] }
embassy-executor = { workspace = true, features = ["arch-std", "executor-thread"] }
embassy-net = { workspace = true }
embassy-net-tuntap = { workspace = true }
heapless = { workspace = true }
heapless_08 = { workspace = true }
tiny_http = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4" }
tokio = { version = "1.0", features = ["full"] }
futures-executor = "0.3"
