[package]
name = "lxx-calendar-boards-tspi"
version = "0.1.0"
edition.workspace = true

[features]
default = ["tspi"]
tspi = []

[dependencies]
lxx-calendar-common = { path = "../../lxx-calendar-common", features = ["log"] }
lxx-calendar-core = { path = "../../lxx-calendar-core" }
static_cell = { workspace = true }
simulator = { path = "../../libs/simulator", features = ["std"] }
epd-yrd0750ryf665f60 = { version = "0.1.0", path = "../../libs/epd" }
critical-section = { workspace = true, features = ["std"] }
wifi-rs = "0.2"
env_logger = "0.11.9"
embassy-net = { workspace = true, features = ["std"] }
embassy-net-tuntap = { workspace = true }
getrandom = { workspace = true, features = ["std"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["std"] }
embassy-executor = { workspace = true, features = ["arch-std", "executor-thread"] }
linux-embedded-hal = { path = "../../libs/linux-embedded-hal", features = [
    "gpio_sysfs",
    "spi",
    "async-tokio",
    "async-spi",
    "async-gpio-sysfs",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-executor = "0.3"
